# reel_notes_bindings

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  inject_docstring.py  pyproject.toml
.github/workflows/: CI.yml
crates/animations/: Cargo.toml
crates/animations/src/: easing.rs  lib.rs  segment.rs  state.rs
crates/cli/: Cargo.toml
crates/cli/src/: error.rs  main.rs
crates/cli/src/pipeline/: mod.rs  render_pass.rs  tts_pass.rs
crates/encoder/: Cargo.toml
crates/encoder/src/: ffmpeg.rs  lib.rs
crates/python-bindings/: Cargo.toml
crates/python-bindings/src/: core.rs  lib.rs  utils.rs
crates/python-bindings/src/types/: mod.rs
crates/python-bindings/src/types/video_input/: animation.rs  audio.rs  background.rs  code.rs  common.rs  elevenlabs.rs  image.rs  layout.rs  math.rs  mod.rs  parts.rs  root.rs  segment.rs  shape.rs  table.rs  text.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: background.rs  context.rs  lib.rs  text.rs
crates/timing/: Cargo.toml
crates/timing/src/: lib.rs
crates/tts-client/: Cargo.toml
crates/tts-client/src/: client.rs  lib.rs  types.rs
crates/video-builder/: Cargo.toml
crates/video-builder/src/: lib.rs
crates/video-language/: Cargo.toml
crates/video-language/src/: lib.rs
crates/video-schema/: Cargo.toml
crates/video-schema/src/: audio.rs  elevenlabs.rs  lib.rs  root.rs  segment.rs  text.rs
python/app/: video_engine.pyi
