[workspace]
resolver = "2"
members = [
  "crates/animations",
  "crates/cli",
  "crates/encoder",
  "crates/video-builder",
  "crates/python-bindings",
  "crates/renderer",
  "crates/timing",
  "crates/video-language",
  "crates/tts-client",
  "crates/video-schema",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
encoder = { path = "crates/encoder" }
animations = { path = "crates/animations" }
# composition / builder
video-builder = { path = "crates/video-builder" }
timing = { path = "crates/timing" }
# utils
futures = "0.3"
pyo3 = { version = "0.29", features = ["experimental-inspect"] }
pyo3-introspection = "*"
renderer = { path = "crates/renderer" }
# http
reqwest = { version = "0.13", features = ["json", "multipart", "stream"] }
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# pyo3-stub-gen = "0.23"
skia-safe = "0.99.0"
tempfile = "3"
# error handling
thiserror = "2.0.18"
# async
tokio = { version = "1", features = ["full"] }
# logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tts-client = { path = "crates/tts-client" }
video-language = { path = "crates/video-language" }
video-schema = { path = "crates/video-schema" }
