[package]
name = "tts-client"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22"
bytes = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
video-schema = { path = "../video-schema" }
